--- a/g-scores-be/Gemfile
+++ b/g-scores-be/Gemfile
@@ -8,12 +8,16 @@ gem 'pg', '~> 1.5'
 gem 'puma', '~> 5.0'
 gem 'active_model_serializers', '~> 0.10.14'
 gem 'sidekiq', '~> 7.3'
+gem 'sidekiq-scheduler', '~> 5.0'
 gem 'sendgrid-actionmailer', '~> 3.2'
 gem 'csv', '~> 3.3'
 gem 'rack-cors', '~> 2.0'
 gem 'bootsnap', '>= 1.4.4', require: false
 gem 'logger', '~> 1.6'
 gem 'sprockets-rails'
+gem 'dotenv-rails'
+gem 'rack-protection'
+gem 'redis', '~> 5.0'
 
 group :development, :test do
   gem 'rspec-rails', '~> 6.1'
