--- a/g-scores-be/Gemfile
+++ b/g-scores-be/Gemfile
@@ -18,6 +18,7 @@ gem 'sprockets-rails'
 gem 'dotenv-rails'
 gem 'rack-protection'
 gem 'redis', '~> 5.0'
+gem 'kaminari', '~> 1.2'
 
 group :development, :test do
   gem 'rspec-rails', '~> 6.1'
