--- a/g-scores-be/config/cable.yml
+++ b/g-scores-be/config/cable.yml
@@ -4,7 +4,7 @@
 # to make the web console appear.
 development:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redis:6379/1
   channel_prefix: g_scores_development
 
 test:
@@ -14,8 +14,3 @@ production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://redis:6379/1" } %>
   channel_prefix: g_scores_production
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
-  message_retention: 1.day
