--- a/g-scores-be/Dockerfile
+++ b/g-scores-be/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN apt-get update -qq && apt-get install -y \
     build-essential \
     libpq-dev \
+    postgresql-client \
     nodejs \
     npm
 
@@ -14,6 +15,10 @@ COPY Gemfile Gemfile.lock ./
 RUN bundle install
 
 COPY . .
+
+# Create log directory and set permissions
+RUN mkdir -p log tmp/pids && \
+    chmod -R 777 log tmp
 
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
