--- a/g-scores-be/Gemfile
+++ b/g-scores-be/Gemfile
@@ -7,7 +7,7 @@ gem 'rails', '~> 7.0.8'
 gem 'pg', '~> 1.5'
 gem 'puma', '~> 5.0'
 gem 'active_model_serializers', '~> 0.10.14'
-gem 'sidekiq', '~> 7.3'
+gem 'sidekiq', '~> 7.0'
 gem 'sidekiq-scheduler', '~> 5.0'
 gem 'sendgrid-actionmailer', '~> 3.2'
 gem 'csv', '~> 3.3'
@@ -19,6 +19,7 @@ gem 'dotenv-rails'
 gem 'rack-protection'
 gem 'redis', '~> 5.0'
 gem 'kaminari', '~> 1.2'
+gem 'activerecord-import', '~> 1.6'
 
 group :development, :test do
   gem 'rspec-rails', '~> 6.1'
