--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,26 +6,18 @@ services:
       context: ./g-scores-fe
       dockerfile: Dockerfile
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:8080"
     depends_on:
       - backend
     networks:
       - app-network
     environment:
-      - NODE_ENV=${NODE_ENV:-development}
-      - VUE_APP_API_URL=${API_URL:-http://localhost:3000}
-      - VUE_APP_WS_URL=${WS_URL:-ws://localhost:3000/cable}
-      - NGINX_HOST=${NGINX_HOST:-localhost}
-      - CORS_ORIGIN=${CORS_ORIGIN:-*}
-      - SSL_CONFIG=${SSL_CONFIG:-}
-      - HSTS_HEADER=${HSTS_HEADER:-}
-      - API_URL=${API_URL:-http://backend:3000}
-      - WS_URL=${WS_URL:-ws://backend:3000/cable}
+      - NODE_ENV=development
+      - VUE_APP_API_URL=http://localhost:3000
+      - VUE_APP_WS_URL=ws://localhost:3000/cable
     volumes:
-      - ./g-scores-fe/dist:/usr/share/nginx/html
-      - ./g-scores-fe/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ${SSL_CERTS_PATH:-./certs}:/etc/nginx/certs
+      - ./g-scores-fe:/app
+      - /app/node_modules
     restart: always
 
   backend:
@@ -43,8 +35,8 @@ services:
       - POSTGRES_DB=g_scores_${RAILS_ENV:-development}
       - REDIS_URL=redis://redis:6379/1
       - SECRET_KEY_BASE=c4f5df38356866bec46b068133f25de3dfd80979d9fb7f2f8cfae4c6c1a1b930b89d9b1d28fe0d246c2ef3b2bdb4b79e6ac72a202298308b90f67805bf09f443
-      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost,http://localhost:80}
-      - CABLE_ALLOWED_REQUEST_ORIGINS=${CABLE_ALLOWED_REQUEST_ORIGINS:-http://localhost,http://localhost:80}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:8080}
+      - CABLE_ALLOWED_REQUEST_ORIGINS=${CABLE_ALLOWED_REQUEST_ORIGINS:-http://localhost:8080}
       - CABLE_URL=${CABLE_URL:-ws://localhost:3000/cable}
       - SSL_KEY_PATH=${SSL_KEY_PATH:-/app/config/ssl/server.key}
       - SSL_CERT_PATH=${SSL_CERT_PATH:-/app/config/ssl/server.crt}
